# regradar

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
regradar/: config.py  server.py
regradar/agents/: state.py
regradar/agents/guardrails/: audit.py  verifier.py
regradar/agents/impact/: map.py  matcher.py
regradar/agents/memo/: draft.py  export.py
regradar/agents/monitor/: monitor.py
regradar/agents/obligation/: extract.py  run.py
regradar/agents/parser/: formex.py  xhtml.py
regradar/agents/prioritize/: deadlines.py  score.py
regradar/console/: index.html
regradar/data/: pipeline.py
regradar/data/bronze/: store.py
regradar/data/groundtruth/: dora_32022R2554.groundtruth.json  schema.py
regradar/data/sources/: cellar.py  http_client.py
regradar/data/sources/fixtures/: dora_32022R2554_en.formex.xml  eurlex_sample.html
regradar/eval/: harness.py  run.py
regradar/knowledge/profile/: schema.py  synthetic_bank.json
regradar/models/: cache.py  router.py
scripts/: deploy_hf.py  grade_impact_mapping.py  grade_live_extraction.py  ingest_real.py  keystone_demo.py  serve.sh  warm_cache.py
tests/: conftest.py  test_api.py  test_bronze_store.py  test_cache.py  test_cellar_and_monitor.py  test_eval_harness.py  test_formex_parser.py  test_groundtruth.py  test_impact_mapping.py  test_memo.py  test_obligation_run.py  test_prioritize.py  test_router.py  test_verifier.py  test_xhtml_parser.py
